set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_RELEASE "-Wall -O1")
cmake_minimum_required(VERSION 3.8)
project(bmi270_ros2)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
include_directories(${ament_INCLUDE_DIRS})
add_executable(bmi270_ros2 fifo_watermark_header_mode.cpp bmi2.c bmi270.c)
ament_target_dependencies(bmi270_ros2 rclcpp std_msgs sensor_msgs)
ament_package()
